--- a/res_file_scan/res_file_scan.vcxproj
+++ b/res_file_scan/res_file_scan.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="res_file_scan_wnd.cpp" />
     <ClCompile Include="manager.cpp" />
     <ClCompile Include="native_control_ui.cpp" />
+    <ClCompile Include="test_ctrl.cpp" />
     <ClCompile Include="traversing_resource.cpp" />
     <ClCompile Include="view_base.cpp" />
     <ClCompile Include="window_impl_base.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="native_control_ui.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="test_ctrl.h" />
     <ClInclude Include="traversing_resource.h" />
     <ClInclude Include="view_base.h" />
     <ClInclude Include="window_impl_base.h" />
