--- a/remote_keyboard/remote_keyboard.vcxproj
+++ b/remote_keyboard/remote_keyboard.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="inlet_function.cpp" />
     <ClCompile Include="native_control_ui.cpp" />
     <ClCompile Include="remote_keyboard.cpp" />
+    <ClCompile Include="setup_pop_wnd.cpp" />
     <ClCompile Include="video_wnd.cpp" />
     <ClCompile Include="vlc_tool.cpp" />
     <ClCompile Include="window_impl_base.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="msg_head.h" />
     <ClInclude Include="native_control_ui.h" />
     <ClInclude Include="remote_keyboard.h" />
+    <ClInclude Include="setup_pop_wnd.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="video_wnd.h" />
