--- a/remote_keyboard/remote_keyboard.vcxproj
+++ b/remote_keyboard/remote_keyboard.vcxproj
@@ -160,6 +160,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ch_ctrl.cpp" />
     <ClCompile Include="frame_wnd.cpp" />
     <ClCompile Include="inlet_function.cpp" />
     <ClCompile Include="native_control_ui.cpp" />
@@ -170,20 +171,17 @@
     <ClCompile Include="window_impl_base.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ch_ctrl.h" />
     <ClInclude Include="frame_wnd.h" />
     <ClInclude Include="msg_head.h" />
     <ClInclude Include="native_control_ui.h" />
     <ClInclude Include="remote_keyboard.h" />
-    <ClInclude Include="resource.h" />
     <ClInclude Include="setup_pop_wnd.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="video_wnd.h" />
     <ClInclude Include="vlc_tool.h" />
     <ClInclude Include="window_impl_base.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="remote_keyboard.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
