--- a/remote_keyboard/remote_keyboard.vcxproj.filters
+++ b/remote_keyboard/remote_keyboard.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="setup_pop_wnd.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ch_ctrl.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="frame_wnd.h">
@@ -71,13 +74,8 @@
     <ClInclude Include="setup_pop_wnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
+    <ClInclude Include="ch_ctrl.h">
       <Filter>头文件</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="remote_keyboard.rc">
-      <Filter>资源文件</Filter>
-    </ResourceCompile>
   </ItemGroup>
 </Project>
