remote_keyboard项目：实现 SetupWnd 按钮的响应；控制台的显示隐藏；云台窗口的创建；

--- a/remote_keyboard/remote_keyboard.vcxproj
+++ b/remote_keyboard/remote_keyboard.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="frame_wnd.cpp" />
     <ClCompile Include="inlet_function.cpp" />
     <ClCompile Include="native_control_ui.cpp" />
+    <ClCompile Include="ptz_wnd.cpp" />
     <ClCompile Include="remote_keyboard.cpp" />
     <ClCompile Include="setup_pop_wnd.cpp" />
     <ClCompile Include="video_wnd.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="frame_wnd.h" />
     <ClInclude Include="msg_head.h" />
     <ClInclude Include="native_control_ui.h" />
+    <ClInclude Include="ptz_wnd.h" />
     <ClInclude Include="remote_keyboard.h" />
     <ClInclude Include="setup_pop_wnd.h" />
     <ClInclude Include="stdafx.h" />
