--- a/remote_keyboard/remote_keyboard.vcxproj.filters
+++ b/remote_keyboard/remote_keyboard.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="setup_pop_wnd.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ptz_wnd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="frame_wnd.h">
@@ -69,6 +72,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="setup_pop_wnd.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ptz_wnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
